<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <TextView
            android:id="@+id/lbl_ask_call"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ask"
            />
    <TextView
            android:id="@+id/lbl_call_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lbl_ask_call"
            android:text=""
            />
    <Button
            android:id="@+id/btn_accept_call"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_cancel_call"
            android:text="@string/btn_ok_text">
    </Button>
    <Button
            android:id="@+id/btn_cancel_call"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_cancel_text">
    </Button>
</RelativeLayout>