<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal" android:padding="0px">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/map"
              android:name="com.google.android.gms.maps.SupportMapFragment"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" />

     <Button
            android:id="@+id/btn_accept"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_margin="2dip"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_accept"
            android:enabled="false"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:id="@+id/textEdit"
                  android:gravity="center_horizontal" android:padding="0px">
        <TextView
                android:id="@+id/txt_route_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_centerHorizontal="true"
                  android:layout_below="@+id/textEdit"
                  android:gravity="center_horizontal" android:padding="0px">

        <ImageButton
                android:id="@+id/btn_zoom_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/zoom_in"
                android:contentDescription="@string/btn_zoom_in_content_descriptor"/>

        <ImageButton
                android:id="@+id/btn_zoom_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/zoom_out"
                android:contentDescription="@string/btn_zoom_out_content_descriptor"/>

        <ImageButton
                android:id="@+id/btn_my_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/my_location"
                android:contentDescription="@string/btn_my_location_content_descriptor"/>
    </LinearLayout>
</RelativeLayout>
